base distribution for stump cmf

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=stump
+DB_USERNAME=stump
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
@@ -17,3 +17,13 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+# url for access to api : public_root/stump.api.svc
+# header Accept : application/x.stump.v1+json
+
+API_STANDARDS_TREE=x
+API_SUBTYPE=stump
+API_PREFIX=stump.api.svc
+API_VERSION=v1
+API_DEBUG=true
+API_STRICT=false
