--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "skimia/stump",
+    "description": "Laravel 5 based One Page Content Management Framework.",
+    "keywords": ["framework", "laravel", "skimia", "stump", "cms", "cmf", "angular"],
     "license": "MIT",
     "type": "project",
     "require": {
