add précision sur une erreur 500 sans infos et ajout du tag -M sur la commande de l'ide helper

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan ide-helper:generate",
+            "php artisan ide-helper:generate -M",
             "php artisan ide-helper:meta",
             "php artisan optimize"
         ],
