mise a jour de la configuration et du composer poiur la mise a jour de assets

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
             "php artisan ide-helper:generate -M",
             "php artisan ide-helper:meta",
             "php artisan optimize",
-            "php artisan asset:dump-collections"
+            "php artisan asset:dump-collections --silent"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
